--- a/static/css/components.css
+++ b/static/css/components.css
@@ -1,5 +1,7 @@
 /* Supervisor/inline links - inherits animated underline from base */
-.supervisor-link {
+.supervisor-link,
+.supervisor-link:link,
+.supervisor-link:visited {
   color: var(--accent);
   font-weight: 500;
   text-decoration: none;
@@ -21,7 +23,9 @@
 }
 
 /* Contact link - inherits animated underline from base */
-.contact-link {
+.contact-link,
+.contact-link:link,
+.contact-link:visited {
   color: var(--accent);
   text-decoration: none;
 }
